--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "backpack/base": "^0.7.19",
+        "backpack/crud": "^3.2",
         "baum/baum": "^1.1",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
@@ -42,6 +44,10 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan vendor:publish --provider=\"Backpack\\CRUD\\CrudServiceProvider\" --tag=\"public\"",
+            "php artisan vendor:publish --provider=\"Backpack\\CRUD\\CrudServiceProvider\" --tag=\"lang\"",
+            "php artisan vendor:publish --provider=\"Backpack\\CRUD\\CrudServiceProvider\" --tag=\"config\"",
+            "php artisan vendor:publish --provider=\"Backpack\\CRUD\\CrudServiceProvider\" --tag=\"elfinder\"",
             "php artisan optimize"
         ],
         "post-update-cmd": [
