--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
+        "backpack/generators": "^1.1",
         "barryvdh/laravel-debugbar": "^2.4",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.5",
