--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "ext-gd": "*"
     },
     "require-dev": {
         "backpack/generators": "^1.1",
