--- a/composer.json
+++ b/composer.json
@@ -6,23 +6,23 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "ext-gd": "*",
         "backpack/base": "^0.7.19",
         "backpack/crud": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.4",
         "baum/baum": "^1.1",
+        "cornford/googlmapper": "2.*",
         "cviebrock/eloquent-sluggable": "^4.2",
+        "doctrine/dbal": "^2.6",
+        "fzaninotto/faker": "~1.4",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0",
-        "ext-gd": "*",
-        "cornford/googlmapper": "2.*",
-        "fzaninotto/faker": "~1.4"
+        "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
         "backpack/generators": "^1.1",
         "barryvdh/laravel-debugbar": "^2.4",
-        "doctrine/dbal": "^2.5",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
