create slack notifications

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "cviebrock/eloquent-sluggable": "^4.2",
         "doctrine/dbal": "^2.6",
         "fzaninotto/faker": "~1.4",
+        "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
